# neogeg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
CMake/: CommonMacros.cmake
assets/shaders/: brdf-integration.glsl  early-depth.glsl  flat.glsl  fullscreen-quad.glsl  pbr.glsl  prefilter-diffuse.glsl  prefilter-specular.glsl  preprocess-env-map.glsl
engine/: CMakeLists.txt
engine/default-assets/shaders/: flat.glsl
engine/src/: lib.cpp  lib.hpp  pch.hpp
engine/src/assets/: asset-manager.cpp  asset-manager.hpp
engine/src/assets/meshes/: meshes.cpp  meshes.hpp
engine/src/core/: app.cpp  app.hpp  asserts.hpp  input.hpp  layer-stack.cpp  layer-stack.hpp  layer.hpp  logger.cpp  logger.hpp  macros.hpp  time.cpp  time.hpp  window.cpp  window.hpp
engine/src/debug/: inspector.cpp  inspector.hpp
engine/src/ecs/: components.hpp  entity.hpp  scene.cpp  scene.hpp
engine/src/events/: base-event.hpp  events.hpp
engine/src/renderer/: camera.hpp  fps-camera.cpp  fps-camera.hpp  renderer.hpp
engine/src/utils/: filesystem.cpp  filesystem.hpp
engine/src/vulkan/: clear-renderer.hpp  color-renderpass.cpp  color-renderpass.hpp  debug-ui.cpp  debug-ui.hpp  depth-color-renderpass.cpp  depth-color-renderpass.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  early-depth-pass.cpp  early-depth-pass.hpp  env-map-preprocessing-pass.cpp  env-map-preprocessing-pass.hpp  fullscreen-quad-pass.cpp  fullscreen-quad-pass.hpp  geg-vulkan.hpp  graphics-context.cpp  graphics-context.hpp  imgui-renderer.cpp  imgui-renderer.hpp  mesh-renderer.cpp  mesh-renderer.hpp  pipeline.cpp  pipeline.hpp  present-renderer.hpp  renderer.cpp  renderer.hpp  renderpass.cpp  renderpass.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  uniform-buffer.cpp  uniform-buffer.hpp  utils.hpp
sandbox/: CMakeLists.txt
sandbox/src/: sandbox.cpp
